--- a/flutter_github_app/pubspec.yaml
+++ b/flutter_github_app/pubspec.yaml
@@ -23,10 +23,49 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  shared_preferences: ^0.5.3+4
+  fluttertoast: ^3.1.0
+  json_annotation: ^3.0.0
+  flutter_redux: ^0.5.3
+  device_info: ^0.4.0+2
+  connectivity: ^0.4.3+7
+  url_launcher: ^5.1.2
+  flutter_markdown: ^0.2.0
+  share: ^0.6.2+1
+  flutter_spinkit: ^3.1.0
+  flutter_webview_plugin: ^0.3.5
+  sqflite: ^1.1.6+3
+  pub_semver: ^1.4.2
+  flutter_svg: ^0.14.0
+  flutter_slidable: ^0.5.3
+  dio: ^2.1.13
+  event_bus:  ^1.1.0
+  flutter_cache_manager: ^1.1.1
+  path_provider: ^1.2.0
+  permission_handler: 3.2.2
+  scoped_model: ^1.0.1
+  package_info: ^0.4.0+6
+  rxdart: ^0.22.1+1
+  android_intent: ^0.3.2
+  webview_flutter: ^0.3.11+2
+  bezier: ^1.1.2
+  provider: ^3.0.0+1
+  flare_flutter:
+    git:
+      url: https://github.com/CarSmallGuo/Flare-Flutter.git
+      path: flare_flutter
+      ref: c7a59c9cff8887abb89f2c36b3911f5fbdf189c8
+  flutter_localizations:
+    sdk: flutter
+  photo_view:
+    git:
+      url: https://github.com/CarSmallGuo/photo_view.git
+      ref: master
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  build_runner: ^1.2.8
+  json_serializable: ^3.2.0
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -41,32 +80,18 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - static/images/logo.png
+    - static/images/welcome.png
+    - static/images/default_img.png
+    - static/file/rejection.json
+    - static/file/rejection2.json
+    - static/file/flare_flutter_logo_.flr
+    - static/file/loading_world_now.flr
+    - static/file/Space-Demo.flr
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
+  fonts:
+    - family: wxcIconFont
+      fonts:
+        - asset: static/font/iconfont.ttf
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
